tests/miniJava/pos/000700_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( java ) while ( 0 ) { } else java [ 0 ] = 0 ; } }
