tests/miniJava/neg/004768_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( ) { return return 0 ; } }
